<resources>
    <string name="app_name">Bitazza</string>

    <!--  ACCOUNT  -->
    <string name="label_title_email">Email</string>
    <string name="label_title_password">Password</string>
    <string name="label_button_login">Login</string>
    <string name="label_button_logout">Logout</string>
    <string name="label_button_sign_up">Sign up</string>
    <string name="label_button_forgot_password">Forgot Password?</string>

    <!--  MAIN  -->
    <string name="menu_market">Market</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_news">News</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_setting">Settings</string>

    <!--  MARKET  -->
    <string name="market_title_volume">Volume</string>
    <string name="market_title_price">Price</string>
    <string name="market_title_change">Change</string>

    <string name="market_mock_value_change">+0.85%</string>

    <!--  WALLET  -->
    <string name="wallet_title_fiat">Fiat</string>
    <string name="wallet_title_crypto">Crypto</string>

    <!--  Toast message  -->
    <string name="message_login_error">Login error.</string>
    <string name="message_logout_error">Logout error.</string>
</resources>