<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/marketFragment"
        android:icon="@drawable/ic_market"
        android:title="@string/menu_market" />

    <item
        android:id="@+id/walletFragment"
        android:icon="@drawable/ic_wallet"
        android:title="@string/menu_wallet" />

    <item
        android:id="@+id/newsFragment"
        android:icon="@drawable/ic_news"
        android:title="@string/menu_news" />

    <item
        android:id="@+id/activityFragment"
        android:icon="@drawable/ic_activity"
        android:title="@string/menu_activity" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_setting"
        android:title="@string/menu_setting" />

</menu>