<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlack191919"
    android:paddingHorizontal="@dimen/space_16dp"
    android:paddingVertical="@dimen/space_02dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvVolumeTitle"
        style="@style/KanitTextViewStyleGray"
        android:layout_width="@dimen/space_00dp"
        android:layout_height="wrap_content"
        android:text="@string/market_title_volume"
        android:textColor="@color/colorGrayCCCCCC"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvPriceTitle"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPriceTitle"
        style="@style/KanitTextViewStyleGray"
        android:layout_width="@dimen/space_00dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/market_title_price"
        android:textColor="@color/colorGrayCCCCCC"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toStartOf="@+id/tvChangeTitle"
        app:layout_constraintHorizontal_weight="0.2"
        app:layout_constraintStart_toEndOf="@+id/tvVolumeTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChangeTitle"
        style="@style/KanitTextViewStyleGray"
        android:layout_width="@dimen/space_00dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/market_title_change"
        android:textColor="@color/colorGrayCCCCCC"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="0.2"
        app:layout_constraintStart_toEndOf="@+id/tvPriceTitle"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>