<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack191919"
    android:orientation="vertical"
    android:padding="@dimen/space_20dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEmail"
        style="@style/KanitTextViewStyleGray"
        android:layout_width="@dimen/space_00dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/label_title_email"
        android:textSize="@dimen/text_size_18sp"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="@dimen/space_00dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorGrayCCCCCC"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        style="@style/KanitTextViewStyleGray"
        android:layout_width="@dimen/space_00dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_18dp"
        android:text="@string/label_title_password"
        android:textSize="@dimen/text_size_18sp"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="@dimen/space_00dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorGrayCCCCCC"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/KanitTextViewStyleWhite"
        android:layout_width="@dimen/space_00dp"
        android:layout_height="wrap_content"
        android:background="@color/colorGreen2FBC86"
        android:gravity="center"
        android:text="@string/label_button_login"
        android:layout_marginTop="@dimen/space_20dp"
        android:textSize="@dimen/text_size_20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>